# review-service/api/appeal/v1/appeal.pb.go
@@ -164,6 +164,156 @@ func (x *CreateAppealReply) GetStatus() string {
 	return ""
 }
 
+type ResolveAppealRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	AppealID   string   `protobuf:"bytes,1,opt,name=appealID,proto3" json:"appealID,omitempty"`
+	OperatorID string   `protobuf:"bytes,2,opt,name=operatorID,proto3" json:"operatorID,omitempty"`
+	Reason     string   `protobuf:"bytes,3,opt,name=reason,proto3" json:"reason,omitempty"`
+	Content    string   `protobuf:"bytes,4,opt,name=content,proto3" json:"content,omitempty"`
+	Pictures   []string `protobuf:"bytes,5,rep,name=pictures,proto3" json:"pictures,omitempty"`
+	Videos     []string `protobuf:"bytes,6,rep,name=videos,proto3" json:"videos,omitempty"`
+	Status     string   `protobuf:"bytes,7,opt,name=status,proto3" json:"status,omitempty"`
+}
+
+func (x *ResolveAppealRequest) Reset() {
+	*x = ResolveAppealRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_appeal_v1_appeal_proto_msgTypes[2]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *ResolveAppealRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*ResolveAppealRequest) ProtoMessage() {}
+
+func (x *ResolveAppealRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_api_appeal_v1_appeal_proto_msgTypes[2]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use ResolveAppealRequest.ProtoReflect.Descriptor instead.
+func (*ResolveAppealRequest) Descriptor() ([]byte, []int) {
+	return file_api_appeal_v1_appeal_proto_rawDescGZIP(), []int{2}
+}
+
+func (x *ResolveAppealRequest) GetAppealID() string {
+	if x != nil {
+		return x.AppealID
+	}
+	return ""
+}
+
+func (x *ResolveAppealRequest) GetOperatorID() string {
+	if x != nil {
+		return x.OperatorID
+	}
+	return ""
+}
+
+func (x *ResolveAppealRequest) GetReason() string {
+	if x != nil {
+		return x.Reason
+	}
+	return ""
+}
+
+func (x *ResolveAppealRequest) GetContent() string {
+	if x != nil {
+		return x.Content
+	}
+	return ""
+}
+
+func (x *ResolveAppealRequest) GetPictures() []string {
+	if x != nil {
+		return x.Pictures
+	}
+	return nil
+}
+
+func (x *ResolveAppealRequest) GetVideos() []string {
+	if x != nil {
+		return x.Videos
+	}
+	return nil
+}
+
+func (x *ResolveAppealRequest) GetStatus() string {
+	if x != nil {
+		return x.Status
+	}
+	return ""
+}
+
+type ResolveAppealReply struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	AppealID string `protobuf:"bytes,1,opt,name=appealID,proto3" json:"appealID,omitempty"`
+	Status   string `protobuf:"bytes,2,opt,name=status,proto3" json:"status,omitempty"`
+}
+
+func (x *ResolveAppealReply) Reset() {
+	*x = ResolveAppealReply{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_appeal_v1_appeal_proto_msgTypes[3]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *ResolveAppealReply) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*ResolveAppealReply) ProtoMessage() {}
+
+func (x *ResolveAppealReply) ProtoReflect() protoreflect.Message {
+	mi := &file_api_appeal_v1_appeal_proto_msgTypes[3]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use ResolveAppealReply.ProtoReflect.Descriptor instead.
+func (*ResolveAppealReply) Descriptor() ([]byte, []int) {
+	return file_api_appeal_v1_appeal_proto_rawDescGZIP(), []int{3}
+}
+
+func (x *ResolveAppealReply) GetAppealID() string {
+	if x != nil {
+		return x.AppealID
+	}
+	return ""
+}
+
+func (x *ResolveAppealReply) GetStatus() string {
+	if x != nil {
+		return x.Status
+	}
+	return ""
+}
+
 var File_api_appeal_v1_appeal_proto protoreflect.FileDescriptor
 
 var file_api_appeal_v1_appeal_proto_rawDesc = []byte{
@@ -190,17 +340,44 @@ var file_api_appeal_v1_appeal_proto_rawDesc = []byte{
 	0x79, 0x12, 0x1a, 0x0a, 0x08, 0x61, 0x70, 0x70, 0x65, 0x61, 0x6c, 0x49, 0x44, 0x18, 0x01, 0x20,
 	0x01, 0x28, 0x09, 0x52, 0x08, 0x61, 0x70, 0x70, 0x65, 0x61, 0x6c, 0x49, 0x44, 0x12, 0x16, 0x0a,
 	0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x06, 0x73,
-	0x74, 0x61, 0x74, 0x75, 0x73, 0x32, 0x75, 0x0a, 0x06, 0x41, 0x70, 0x70, 0x65, 0x61, 0x6c, 0x12,
-	0x6b, 0x0a, 0x0c, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x41, 0x70, 0x70, 0x65, 0x61, 0x6c, 0x12,
-	0x22, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x61, 0x70, 0x70, 0x65, 0x61, 0x6c, 0x2e, 0x76, 0x31, 0x2e,
-	0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x41, 0x70, 0x70, 0x65, 0x61, 0x6c, 0x52, 0x65, 0x71, 0x75,
-	0x65, 0x73, 0x74, 0x1a, 0x20, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x61, 0x70, 0x70, 0x65, 0x61, 0x6c,
-	0x2e, 0x76, 0x31, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x41, 0x70, 0x70, 0x65, 0x61, 0x6c,
-	0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x15, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0f, 0x3a, 0x01, 0x2a,
-	0x22, 0x0a, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x70, 0x70, 0x65, 0x61, 0x6c, 0x42, 0x21, 0x5a, 0x1f,
-	0x72, 0x65, 0x76, 0x69, 0x65, 0x77, 0x2d, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2f, 0x61,
-	0x70, 0x69, 0x2f, 0x61, 0x70, 0x70, 0x65, 0x61, 0x6c, 0x2f, 0x76, 0x31, 0x3b, 0x76, 0x31, 0x62,
-	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x74, 0x61, 0x74, 0x75, 0x73, 0x22, 0xe8, 0x01, 0x0a, 0x14, 0x52, 0x65, 0x73, 0x6f, 0x6c, 0x76,
+	0x65, 0x41, 0x70, 0x70, 0x65, 0x61, 0x6c, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x1a,
+	0x0a, 0x08, 0x61, 0x70, 0x70, 0x65, 0x61, 0x6c, 0x49, 0x44, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09,
+	0x52, 0x08, 0x61, 0x70, 0x70, 0x65, 0x61, 0x6c, 0x49, 0x44, 0x12, 0x1e, 0x0a, 0x0a, 0x6f, 0x70,
+	0x65, 0x72, 0x61, 0x74, 0x6f, 0x72, 0x49, 0x44, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0a,
+	0x6f, 0x70, 0x65, 0x72, 0x61, 0x74, 0x6f, 0x72, 0x49, 0x44, 0x12, 0x22, 0x0a, 0x06, 0x72, 0x65,
+	0x61, 0x73, 0x6f, 0x6e, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x42, 0x0a, 0xfa, 0x42, 0x07, 0x72,
+	0x05, 0x10, 0x01, 0x18, 0xfa, 0x01, 0x52, 0x06, 0x72, 0x65, 0x61, 0x73, 0x6f, 0x6e, 0x12, 0x24,
+	0x0a, 0x07, 0x63, 0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x74, 0x18, 0x04, 0x20, 0x01, 0x28, 0x09, 0x42,
+	0x0a, 0xfa, 0x42, 0x07, 0x72, 0x05, 0x10, 0x01, 0x18, 0x80, 0x08, 0x52, 0x07, 0x63, 0x6f, 0x6e,
+	0x74, 0x65, 0x6e, 0x74, 0x12, 0x1a, 0x0a, 0x08, 0x70, 0x69, 0x63, 0x74, 0x75, 0x72, 0x65, 0x73,
+	0x18, 0x05, 0x20, 0x03, 0x28, 0x09, 0x52, 0x08, 0x70, 0x69, 0x63, 0x74, 0x75, 0x72, 0x65, 0x73,
+	0x12, 0x16, 0x0a, 0x06, 0x76, 0x69, 0x64, 0x65, 0x6f, 0x73, 0x18, 0x06, 0x20, 0x03, 0x28, 0x09,
+	0x52, 0x06, 0x76, 0x69, 0x64, 0x65, 0x6f, 0x73, 0x12, 0x16, 0x0a, 0x06, 0x73, 0x74, 0x61, 0x74,
+	0x75, 0x73, 0x18, 0x07, 0x20, 0x01, 0x28, 0x09, 0x52, 0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73,
+	0x22, 0x48, 0x0a, 0x12, 0x52, 0x65, 0x73, 0x6f, 0x6c, 0x76, 0x65, 0x41, 0x70, 0x70, 0x65, 0x61,
+	0x6c, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x12, 0x1a, 0x0a, 0x08, 0x61, 0x70, 0x70, 0x65, 0x61, 0x6c,
+	0x49, 0x44, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x61, 0x70, 0x70, 0x65, 0x61, 0x6c,
+	0x49, 0x44, 0x12, 0x16, 0x0a, 0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x02, 0x20, 0x01,
+	0x28, 0x09, 0x52, 0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x32, 0xed, 0x01, 0x0a, 0x06, 0x41,
+	0x70, 0x70, 0x65, 0x61, 0x6c, 0x12, 0x6b, 0x0a, 0x0c, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x41,
+	0x70, 0x70, 0x65, 0x61, 0x6c, 0x12, 0x22, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x61, 0x70, 0x70, 0x65,
+	0x61, 0x6c, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x41, 0x70, 0x70, 0x65,
+	0x61, 0x6c, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x20, 0x2e, 0x61, 0x70, 0x69, 0x2e,
+	0x61, 0x70, 0x70, 0x65, 0x61, 0x6c, 0x2e, 0x76, 0x31, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65,
+	0x41, 0x70, 0x70, 0x65, 0x61, 0x6c, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x15, 0x82, 0xd3, 0xe4,
+	0x93, 0x02, 0x0f, 0x3a, 0x01, 0x2a, 0x22, 0x0a, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x70, 0x70, 0x65,
+	0x61, 0x6c, 0x12, 0x76, 0x0a, 0x0d, 0x52, 0x65, 0x73, 0x6f, 0x6c, 0x76, 0x65, 0x41, 0x70, 0x70,
+	0x65, 0x61, 0x6c, 0x12, 0x23, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x61, 0x70, 0x70, 0x65, 0x61, 0x6c,
+	0x2e, 0x76, 0x31, 0x2e, 0x52, 0x65, 0x73, 0x6f, 0x6c, 0x76, 0x65, 0x41, 0x70, 0x70, 0x65, 0x61,
+	0x6c, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x21, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x61,
+	0x70, 0x70, 0x65, 0x61, 0x6c, 0x2e, 0x76, 0x31, 0x2e, 0x52, 0x65, 0x73, 0x6f, 0x6c, 0x76, 0x65,
+	0x41, 0x70, 0x70, 0x65, 0x61, 0x6c, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x1d, 0x82, 0xd3, 0xe4,
+	0x93, 0x02, 0x17, 0x3a, 0x01, 0x2a, 0x22, 0x12, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x70, 0x70, 0x65,
+	0x61, 0x6c, 0x2f, 0x72, 0x65, 0x73, 0x6f, 0x6c, 0x76, 0x65, 0x42, 0x21, 0x5a, 0x1f, 0x72, 0x65,
+	0x76, 0x69, 0x65, 0x77, 0x2d, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2f, 0x61, 0x70, 0x69,
+	0x2f, 0x61, 0x70, 0x70, 0x65, 0x61, 0x6c, 0x2f, 0x76, 0x31, 0x3b, 0x76, 0x31, 0x62, 0x06, 0x70,
+	0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -215,16 +392,20 @@ func file_api_appeal_v1_appeal_proto_rawDescGZIP() []byte {
 	return file_api_appeal_v1_appeal_proto_rawDescData
 }
 
-var file_api_appeal_v1_appeal_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_api_appeal_v1_appeal_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
 var file_api_appeal_v1_appeal_proto_goTypes = []any{
-	(*CreateAppealRequest)(nil), // 0: api.appeal.v1.CreateAppealRequest
-	(*CreateAppealReply)(nil),   // 1: api.appeal.v1.CreateAppealReply
+	(*CreateAppealRequest)(nil),  // 0: api.appeal.v1.CreateAppealRequest
+	(*CreateAppealReply)(nil),    // 1: api.appeal.v1.CreateAppealReply
+	(*ResolveAppealRequest)(nil), // 2: api.appeal.v1.ResolveAppealRequest
+	(*ResolveAppealReply)(nil),   // 3: api.appeal.v1.ResolveAppealReply
 }
 var file_api_appeal_v1_appeal_proto_depIdxs = []int32{
 	0, // 0: api.appeal.v1.Appeal.CreateAppeal:input_type -> api.appeal.v1.CreateAppealRequest
-	1, // 1: api.appeal.v1.Appeal.CreateAppeal:output_type -> api.appeal.v1.CreateAppealReply
-	1, // [1:2] is the sub-list for method output_type
-	0, // [0:1] is the sub-list for method input_type
+	2, // 1: api.appeal.v1.Appeal.ResolveAppeal:input_type -> api.appeal.v1.ResolveAppealRequest
+	1, // 2: api.appeal.v1.Appeal.CreateAppeal:output_type -> api.appeal.v1.CreateAppealReply
+	3, // 3: api.appeal.v1.Appeal.ResolveAppeal:output_type -> api.appeal.v1.ResolveAppealReply
+	2, // [2:4] is the sub-list for method output_type
+	0, // [0:2] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
 	0, // [0:0] is the sub-list for extension extendee
 	0, // [0:0] is the sub-list for field type_name
@@ -260,6 +441,30 @@ func file_api_appeal_v1_appeal_proto_init() {
 				return nil
 			}
 		}
+		file_api_appeal_v1_appeal_proto_msgTypes[2].Exporter = func(v any, i int) any {
+			switch v := v.(*ResolveAppealRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_api_appeal_v1_appeal_proto_msgTypes[3].Exporter = func(v any, i int) any {
+			switch v := v.(*ResolveAppealReply); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -267,7 +472,7 @@ func file_api_appeal_v1_appeal_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_api_appeal_v1_appeal_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   2,
+			NumMessages:   4,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
